Siteplan grammar fixes and realignments

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -21,11 +21,21 @@ header div img {
     list-style: none;
 }
 
+.color-schema {
+    display: grid;
+    grid-template-columns: 120px 1fr;
+    align-items: center;
+}
+
+.color-schema h2 {
+    grid-column: 1 / 3;
+}
+
 .box {
-    width: 10%;
+    width: 100px;
     height: 2rem;
     border: 1px solid #aaa;
-    padding: 10px;
+    /* padding: 10px; */
     margin: 10px;
 }
 
